--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3"
+    "eslint-plugin-prettier": "^2.1.2",
+    "eslint-plugin-react": "^6.10.3",
+    "prettier": "^1.5.3"
   },
   "peerDependencies": {
     "babel-eslint": "^7.2.3",
