--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.3.0"
+    "eslint-plugin-react": "^7.3.0",
+    "prettier": "^1.7.4"
   },
   "peerDependencies": {
     "babel-eslint": "^7.2.3",
