--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cheesecakelabs"
   ],
   "dependencies": {
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-config-prettier": "^2.6.0",
     "eslint-import-resolver-webpack": "^0.8.3",
