--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "cheesecakelabs"
   ],
   "dependencies": {
-    "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-prettier": "^2.6.0",
@@ -33,7 +32,6 @@
     "prettier": "^1.7.4"
   },
   "peerDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": ">=3"
+    "eslint": "^5.3.0"
   }
 }
