--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "prettier": "^1.7.4"
   },
   "peerDependencies": {
