--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.19.1"
   },
   "peerDependencies": {
-    "eslint": "^5.3.0"
+    "eslint": "6.1.0",
+    "webpack": "^4.41.2"
   }
 }
