--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.6.0",
-    "eslint-import-resolver-webpack": "^0.11.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
@@ -37,7 +36,6 @@
     "prettier": "^1.19.1"
   },
   "peerDependencies": {
-    "eslint": "6.1.0",
-    "webpack": "^4.41.2"
+    "eslint": "^6.1.0"
   }
 }
